--- a/pom.xml
+++ b/pom.xml
@@ -99,11 +99,11 @@
       <version>2.0.1.RELEASE</version>
     </dependency>
 
-    <!-- <dependency>
+    <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-devtools</artifactId>
-       <version>1.5.9.RELEASE</version>
-     </dependency>-->
+       <optional>true</optional>
+    </dependency>
 
 
     <!--Mysql数据库驱动-->
