--- a/len-web/src/main/resources/application-mysql-dev.yml
+++ b/len-web/src/main/resources/application-mysql-dev.yml
@@ -7,7 +7,7 @@ spring:
       restart:
         enabled: true
   datasource:
-        url: jdbc:mysql://localhost:3306/lenos?useUnicode=true&characterEncoding=UTF-8
+        url: jdbc:mysql://47.107.116.131:3306/lenos?useUnicode=true&characterEncoding=UTF-8
         username: root
         password: root
         # 使用druid数据源
